--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,5 +4,6 @@ WORKDIR /app/frontend
 COPY package.json package-lock.json ./
 RUN npm install
 RUN npm install react-scripts@3.4.1 -g
+RUN npm install react-bootstrap bootstrap
 COPY . ./
 EXPOSE 3000
