initial django models added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@
 #
 # Docker compose file for launching and running both frontend and backend
 # docker containers for the Biopath app
-#
-# Modified by: Josh S.
 
 version: "3.2"
 services:
@@ -17,33 +15,18 @@ services:
   #   networks:
   #     - db-net
 
-  # db:
-  #   # Josh S. - Figured we may as well dockerize the DB
-  #   container_name: mariadb
-  #   restart: always
-  #   image: mariadb:10.7
-  #   volumes:
-  #     - "${biopath_root_path}/mariadb:/var/lib/mysql"
-  #   environment:
-  #     # - MYSQL_HOST=localhost
-  #     # - MYSQL_PORT=3306
-  #     # - MYSQL_ROOT_HOST=%
-  #     - MYSQL_DATABASE=BioPath
-  #     - MYSQL_USER=username
-  #     - MYSQL_PASSWORD=password # We'll need to change this
-  #     - MYSQL_ROOT_PASSWORD=password
-  #   ports:
-  #     - "3306:3306"
-  #   networks:
-  #     - db-net
-
   db:
+    # Josh S. - Dockerized the DB and changed to postgres
     container_name: postgres
     image: postgres:14.1-alpine
     restart: always
-    volumes:
-      - "${biopath_root_path}/postgres:/var/lib/postgresql/data"
+    volumes: # volume for database persistence while container is down
+             # you must set the environment variable biopath_root_path on your machine
+             #  for me this was just
+             #   'export biopath_root_path="~/Users/joshuaschmitz/Projects/BioPath"'
+      - "${biopath_root_path}/postgres:/var/lib/postgresql/data/"
     environment:
+      # these are the same as those in backend container
       - POSTGRES_USER=username
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=BioPath
@@ -51,21 +34,18 @@ services:
       - '5432:5432'
 
   backend:
-    # Josh S - Renamed to backend
+    # Josh S - Renamed to backend for consistency purposes
     # Zach B - We ran into constant restart issues, fixed when we removed this
     # restart: always
     container_name: backend
-    # Zach B. - Use this command if you run into a race-condition issue where database port is not open
-    # command : python check_db.py --service-name db --ip db --port 3306 && 
-    #           python manage.py migrate &&
-    #           python manage.py runserver 0.0.0.0:8000
-    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py runserver 0.0.0.0:8000'
+    # Josh S - Edited command to wait until DB is ready to accept connections before migrating and then starting server
+    #   Not sure if we should actually makemigrations and migrate every startup, but it works for now
+    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py makemigrations; python manage.py migrate; python manage.py runserver 0.0.0.0:8000'
     environment:
+      # These are the same as those in db container
       - POSTGRES_DB=BioPath
       - POSTGRES_USER=username
       - POSTGRES_PASSWORD=password
-    # env_file:
-    #   - ./backend/settings.ini
     build:
       context: ./backend/
       dockerfile: Dockerfile
@@ -92,6 +72,7 @@ services:
     # networks:
     #   - db-net
 
+# Josh S - This was unneeded for now; removed to decrease complexity
 # networks:
 #   db-net:
 #     driver: bridge
