--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,9 +40,16 @@ services:
     container_name: backend
     # Josh S - Edited command to wait until DB is ready to accept connections before migrating and then starting server
     #   Not sure if we should actually makemigrations and migrate every startup, but it works for now
-    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py makemigrations; python manage.py migrate; python manage.py runserver 0.0.0.0:8000'
+    #command: bash -c "/app/api/startup.sh"
     environment:
+      # TODO: change username, password, email
+      # django admin login
+      - DJANGO_ADMIN_USER=root
+      - DJANGO_ADMIN_PASS=root
+      - DJANGO_ADMIN_EMAIL=root@root.com
+
       # These are the same as those in db container
+      # TODO: change username, password
       - POSTGRES_DB=BioPath
       - POSTGRES_USER=username
       - POSTGRES_PASSWORD=password
