--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,49 +5,14 @@ on:
   push:
     branches: [main]
 
-env:
-  AWS_REGION: us-west-2
-  ECR_REPOSITORY: biopath_repo 
-  ECS_SERVICE: 
-  ECS_CLUSTER:
-  ECS_TASK_DEFINITION: 
-  CONTAINER_NAME: 
 
 jobs:
-  deploy:
-    name: AWS Deploy
+  BuildDockerImages:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code 
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - run: |
+        docker build -t biopath_frontend:frontend_latest ./frontend/
+        docker build -t biopath_backend:backend_latest ./backend/
+        
 
-      - name: Configure AWS Credentials 
-        uses: aws-actions/configure-
-        with: 
-
-      - name: Send Docker Image To ECR
-        env: # define new variables 
-          ECR_REGISTRY: ${{steps.login-ecr.outputs.registry}}
-          IMAGE_TAG: ${{github.sha}}
-        run: # docker build -t <name-tag> .
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        run: # docker push <repo_uri>
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-      
-
-      # --------------------------------
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
-        with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.image }}
-
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
