--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,5 +14,11 @@ jobs:
       - run: |
         docker build -t biopath_frontend:frontend_latest ./frontend/
         docker build -t biopath_backend:backend_latest ./backend/
+        aws ecr get-login-password --region us-west-2 \
+          | docker login \
+            --username AWS \
+            --password-stdin <aws_account_id>.dkr.ecr.us-west-2.amazonaws.com
+        docker tag 
+
         
 
