removed legacy stuff

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ postgres
 *.code-workspace
 **/*.log
 postgres.log
+**/*.sqlite3
 
 # ignore private credentials which should be kept local
 AWS/aws_credentials.csv
