--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -1,30 +1,30 @@
-name: Continuous Integration
+# name: Continuous Integration
 
-# on pull requests to the main branch this file should trigger github actions 
-# to do a series of defined actions
-on:
-  pull_request:
-    branches: [main] 
+# # on pull requests to the main branch this file should trigger github actions 
+# # to do a series of defined actions
+# on:
+#   pull_request:
+#     branches: [main] 
 
 
-jobs:
-  # Runs all unit tests  
-  #TODO: as we figure out what tests we are going to be running we should
-  # add them here 
-  test_pull_request:
-    runs-on: ubuntu-latest
+# jobs:
+#   # Runs all unit tests  
+#   #TODO: as we figure out what tests we are going to be running we should
+#   # add them here 
+#   test_pull_request:
+#     runs-on: ubuntu-latest
 
-    # runs build tests across multiple versions of node 
-    strategy:
-      matrix:
-        # specify any other versions we want to test here
-        node-version: [13.x]
+#     # runs build tests across multiple versions of node 
+#     strategy:
+#       matrix:
+#         # specify any other versions we want to test here
+#         node-version: [13.x]
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Using Node.js version ${{matrix.node_version}}
-        uses: actions/setup-node@v3
-        with: node-version: ${{matrix.node_version}}
-      - run: npm ci
-      - run: npm run build
-      - run: npm test
+#     steps:
+#       - uses: actions/checkout@v3
+#       - name: Using Node.js version ${{matrix.node_version}}
+#         uses: actions/setup-node@v3
+#         with: node-version: ${{matrix.node_version}}
+#       - run: npm ci
+#       - run: npm run build
+#       - run: npm test
