--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -44,9 +44,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - run: cd backend
     - name: Install Dependencies
       run: |
-        cd backend
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
