--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd frontend
+    # - run: cd frontend
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
@@ -44,7 +44,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - run: cd backend
+    # - run: cd backend
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
