--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -4,7 +4,7 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [ "main", "dev" ]
+    branches: "*"
   pull_request:
     branches: [ "main", "dev" ]
 
