--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -13,6 +13,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    # specify where the frontend code is
+    defaults:
+      run:
+        working-directory: frontend
+
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
@@ -25,7 +30,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    # - run: cd frontend
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
@@ -33,6 +37,12 @@ jobs:
   build-backend:
 
     runs-on: ubuntu-latest
+
+    # specify where the backend code is
+    defaults:
+      run:
+        working-directory: backend
+
     strategy:
       max-parallel: 4
       matrix:
@@ -44,7 +54,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    # - run: cd backend
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
