--- a/AWS/copilot/environments/production/manifest.yml
+++ b/AWS/copilot/environments/production/manifest.yml
@@ -1,9 +1,9 @@
-# The manifest for the "biopath-env" environment.
+# The manifest for the "production" environment.
 # Read the full specification for the "Environment" type at:
 #  https://aws.github.io/copilot-cli/docs/manifest/environment/
 
 # Your environment name will be used in naming your resources like VPC, cluster, etc.
-name: biopath-env
+name: production
 type: Environment
 
 # Import your own VPC and subnets or configure how they should be created.
