--- a/AWS/copilot/backend/manifest.yml
+++ b/AWS/copilot/backend/manifest.yml
@@ -1,54 +1,55 @@
 # The manifest for the "backend" service.
-# Read the full specification for the "Backend Service" type at:
-#  https://aws.github.io/copilot-cli/docs/manifest/backend-service/
+# Read the full specification for the "Request-Driven Web Service" type at:
+# https://aws.github.io/copilot-cli/docs/manifest/rd-web-service/
 
-# Your service name will be used in naming your resources like log groups, ECS services, etc.
+# Your service name will be used in naming your resources like log groups, App Runner services, etc.
 name: backend
-type: Backend Service
+# The "architecture" of the service you're running.
+type: Request-Driven Web Service
 
-# Your service is reachable at "http://backend.${COPILOT_SERVICE_DISCOVERY_ENDPOINT}:8000" but is not public.
-
-# Configuration for your containers and service.
 image:
-  # Docker build arguments. For additional overrides: https://aws.github.io/copilot-cli/docs/manifest/backend-service/#image-build
+  # Docker build arguments.
+  # For additional overrides: https://aws.github.io/copilot-cli/docs/manifest/rd-web-service/#image-build
   build: ../backend/Dockerfile.prod
   # Port exposed through your container to route traffic to it.
   port: 8000
 
-cpu: 256       # Number of CPU units for the task.
-memory: 512    # Amount of memory in MiB used by the task.
-count: 1       # Number of tasks that should be running in your service.
-exec: true     # Enable running commands in your container.
-network:
-  connect: true # Enable Service Connect for intra-environment traffic between services.
+# http:
+#   healthcheck:
+#     path: /
+#     healthy_threshold: 3
+#     unhealthy_threshold: 5
+#     interval: 10s
+#     timeout: 5s
 
-# storage:
-  # readonly_fs: true       # Limit to read-only access to mounted root filesystems.
+# Number of CPU units for the task.
+cpu: 1024
+# Amount of memory in MiB used by the task.
+memory: 2048
 
+# Connect your App Runner service to your environment's VPC.
+# network:
+#   vpc:
+#     placement: private
+
+
+# Enable tracing for the service.
+# observability:
+#   tracing: awsxray
 
 # Optional fields for more advanced use-cases.
-# FOR NOW:
-# the only the production version of the app will be pushed from copilot. There is a way to push
-# specific versions of enviornment variables based on the enviornment it is in. That will not be necessary for
-# our use case
-# https://aws.github.io/copilot-cli/docs/developing/environment-variables/ 
 variables:                    # Pass environment variables as key value pairs.
  RDS_DB_NAME: "biopath-db"
  RDS_HOSTNAME: "biopath-db.covgnwx3ckfu.us-west-2.rds.amazonaws.com"
  RDS_PORT: 5432
  RDS_USERNAME: "postgres"
  RDS_PASSWORD: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/RDS_PASSWORD
-
-
-
-#secrets:                      # Pass secrets from AWS Systems Manager (SSM) Parameter Store.
-# https://aws.github.io/copilot-cli/docs/developing/secrets/
-#  GITHUB_TOKEN: GITHUB_TOKEN  # The key is the name of the environment variable, the value is the name of the SSM parameter.
-
+#
+# tags:                         # Pass tags as key value pairs.
+#   project: project-name
 
 # You can override any of the values defined above by environment.
-#environments:
-#  test:
-#    count: 2               # Number of tasks to run for the "test" environment.
-#    deployment:            # The deployment strategy for the "test" environment.
-#       rolling: 'recreate' # Stops existing tasks before new ones are started for faster deployments.
+# environments:
+#   test:
+#     variables:
+#       LOG_LEVEL: debug        # Log level for the "test" environment.
