--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -6,7 +6,7 @@ COPY . ./
 RUN pip install -r requirements.txt
 EXPOSE 8000
 
-ENTRYPOINT ["python3"]
-CMD ["manage.py", "makemigrations"]
-CMD ["manage.py", "migrate"]
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python3", "manage.py makemigrations"]
+CMD ["python3", "manage.py migrate"]
+
+CMD ["gunicorn", "biopath.wsgi:application", "--bind", "0.0.0.0:8000"]
