--- a/AWS/copilot/backend/manifest.yml
+++ b/AWS/copilot/backend/manifest.yml
@@ -23,9 +23,9 @@ image:
 #     timeout: 5s
 
 # Number of CPU units for the task.
-cpu: 1024
+cpu: 256
 # Amount of memory in MiB used by the task.
-memory: 2048
+memory: 512
 
 # Connect your App Runner service to your environment's VPC.
 # network:
@@ -43,7 +43,7 @@ variables:                    # Pass environment variables as key value pairs.
  RDS_HOSTNAME: "biopath-db.covgnwx3ckfu.us-west-2.rds.amazonaws.com"
  RDS_PORT: 5432
  RDS_USERNAME: "biopath_admin"
- RDS_PASSWORD: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/RDS_PASSWORD
+ RDS_PASSWORD: "WsatnbBqr7get9A"
 #
 # tags:                         # Pass tags as key value pairs.
 #   project: project-name
