--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,12 +1,9 @@
 
 
 FROM python:3
-WORKDIR /app/api
+WORKDIR /app
 COPY . ./
 RUN pip install -r requirements.txt
 EXPOSE 8000
 
-CMD ["python3", "manage.py makemigrations"]
-CMD ["python3", "manage.py migrate"]
-
-CMD ["gunicorn", "biopath.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
