--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,16 +69,16 @@ services:
     # networks:
     #   - db-net
 
-  frontend:
-    container_name: frontend
-    restart: always
-    command : npm start
-    build:
-      context: ./frontend/
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    stdin_open: true
+  # frontend:
+  #   container_name: frontend
+  #   restart: always
+  #   command : npm start
+  #   build:
+  #     context: ./frontend/
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3000:3000"
+  #   stdin_open: true
     # depends_on:
     #   - backend
     # networks:
