frontend to backend targeting fixed

--- a/frontend/Dockerfile.remote
+++ b/frontend/Dockerfile.remote
@@ -5,14 +5,15 @@ FROM node:16-alpine
 WORKDIR /app
 # Copy app files
 COPY . .
-# ==== BUILD =====
+
+# set the build type to development
+ENV REACT_APP_BACKEND_LOCATION=remote
+
 # Install dependencies (npm ci makes sure the exact versions in the lockfile gets installed)
 RUN npm ci 
 # Build the app
 RUN npm run build
-# ==== RUN =======
-# Set the env to "local"
-ENV NODE_ENV local
+
 # Expose the port on which the app will be running (3000 is the default that `serve` uses)
 EXPOSE 3000
 # Start the app
