--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
@@ -24,7 +25,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "docs": "jsdoc -c jsdoc.json",
-
     "build-dev": "webpack --env.ENVIRONMENT=development --config webpack.config.dev.js",
     "build-production": "webpack --env.ENVIRONMENT=production --config webpack.config.build.js"
   },
