--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -92,3 +92,8 @@ api/migrations
 *.env
 *.venv
 *.sqlite3
+
+frontend/static/css/*
+frontend/static/js/*
+frontend/static/media/*
+frontend/static/asset-manifest.json
