--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,6 @@ services:
     ports:
       - "80:80"
       - "8000:8000"
-    env_file: backend/.env.dev
-
-  # AWS specific configuration details
-  # logging:
-  #   driver: awslogs 
-  #   options:
-  #     awslogs-group: BiopathLogGroup 
-  #     awslogs-region: us-west-2
-  #     awslogs-stream-prefix:
+    env_file: backend/.env.db.local
+    depends_on:
+      - db
