--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,19 +2,10 @@
 #
 # Docker compose file for launching and running both frontend and backend
 # docker containers for the Biopath app
+# 
 
 version: "3.2"
 services:
-  # Zach B - No need for redis at the moment, but we'll leave this 
-  #           here in case we use it in the future
-  # redis:
-  #   restart: always
-  #   image: redis:5
-  #   ports:
-  #     - "6379:6379"
-  #   networks:
-  #     - db-net
-
   db:
     # Josh S. - Dockerized the DB and changed to postgres
     container_name: postgres
@@ -42,25 +33,31 @@ services:
     # Josh S - Edited command to wait until DB is ready to accept connections before migrating and then starting server
     #   Not sure if we should actually makemigrations and migrate every startup, but it works for now
     #command: bash -c "/app/api/startup.sh"
-    environment:
+
+    env_file: # where the enviornment varibles come from
+      - backend/local.env
+
+    # environment:
       # TODO: change username, password, email
       # django admin login
-      - DJANGO_ADMIN_USER=root
-      - DJANGO_ADMIN_PASS=root
-      - DJANGO_ADMIN_EMAIL=root@root.com
+      # - DJANGO_ADMIN_USER=root
+      # - DJANGO_ADMIN_PASS=root
+      # - DJANGO_ADMIN_EMAIL=root@root.com
 
-      # These are the same as those in db container
-      # TODO: change username, password
-      - POSTGRES_DB=BioPath
-      - POSTGRES_USER=username
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB_HOST=db
+      # # These are the same as those in db container
+      # # TODO: change username, password
+      # - POSTGRES_DB=BioPath
+      # - POSTGRES_USER=username
+      # - POSTGRES_PASSWORD=password
+      # - POSTGRES_DB_HOST=db
     build:
       context: ./backend/
       dockerfile: Dockerfile
     image: backend
     ports:
       - "8000:8000"
+    depends_on:
+      - db
 
     # comment out dependancy for now
     # depends_on:
@@ -69,28 +66,18 @@ services:
     # networks:
     #   - db-net
 
-  # frontend:
-  #   container_name: frontend
-  #   restart: always
-  #   command : npm start
-  #   build:
-  #     context: ./frontend/
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "3000:3000"
-  #   stdin_open: true
-    # depends_on:
-    #   - backend
-    # networks:
-    #   - db-net
-
-  # AWS specific configuration details
-  # logging:
-  #   driver: awslogs 
-  #   options:
-  #     awslogs-group: BiopathLogGroup 
-  #     awslogs-region: us-west-2
-  #     awslogs-stream-prefix:
+  frontend:
+    container_name: frontend
+    restart: always
+    command : npm start
+    build:
+      context: ./frontend/
+      dockerfile: Dockerfile.local
+    ports:
+      - "3000:3000"
+    stdin_open: true
+    depends_on:
+      - backend
 
 
 # Josh S - This was unneeded for now; removed to decrease complexity
