--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,8 @@
   "scripts": {
     "start-local": "env-cmd -f .env.backend.local react-scripts start",
     "start-remote": "env-cmd -f .env.backend.remote react-scripts start",
-    "build-local": "env-cmd -f .env.local react-scripts build",
-    "build-remote": "env-cmd -f .env.remote react-scripts build",
+    "build-local": "env-cmd -f .env.backend.local react-scripts build",
+    "build-remote": "env-cmd -f .env.backend.remote react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "docs": "jsdoc -c jsdoc.json",
