--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -86,9 +86,10 @@ __pycache__/
 **/__pycache__/
 local_settings.py
 api/migrations
-
 !api/migrations/__init__.py
 
+
 *.env
+!.env.dev
 *.venv
 *.sqlite3
