--- a/AWS/copilot/biopath/manifest.yml
+++ b/AWS/copilot/biopath/manifest.yml
@@ -1,9 +1,9 @@
-# The manifest for the "biopath-backend" service.
+# The manifest for the "biopath" service.
 # Read the full specification for the "Request-Driven Web Service" type at:
 # https://aws.github.io/copilot-cli/docs/manifest/rd-web-service/
 
 # Your service name will be used in naming your resources like log groups, App Runner services, etc.
-name: biopath-backend
+name: biopath
 # The "architecture" of the service you're running.
 type: Request-Driven Web Service
 
@@ -11,7 +11,6 @@ image:
   # Docker build arguments.
   # For additional overrides: https://aws.github.io/copilot-cli/docs/manifest/rd-web-service/#image-build
   build: ../backend/Dockerfile
-  # target: production # target the production build stage
   # Port exposed through your container to route traffic to it.
   port: 80
 
@@ -56,6 +55,11 @@ variables:                    # Pass environment variables as key value pairs.
   DJANGO_ENV: "remote"
   DJANGO_ALLOWED_HOSTS: "localhost 127.0.0.1 [::1]"
 
+# Optional fields for more advanced use-cases.
+#
+# variables:                    # Pass environment variables as key value pairs.
+#   LOG_LEVEL: info
+#
 # tags:                         # Pass tags as key value pairs.
 #   project: project-name
 
