--- a/frontend/.env.backend.remote
+++ b/frontend/.env.backend.remote
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_ENDPOINT=https://wtfysc3awc.us-west-2.awsapprunner.com/
+REACT_APP_BACKEND_ENDPOINT=https://pchmfbhcvm.us-west-2.awsapprunner.com
