--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -4,7 +4,7 @@ upstream django_app {
 
 server {
     listen 80;
-    # add localhost 127.0.0.1 to server_name to run locally
+    # add  to server_name to run locally
     server_name pchmfbhcvm.us-west-2.awsapprunner.com; # not sure what this should be in prod
 
     access_log /dev/stdout;
