--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -5,7 +5,8 @@ upstream django_app {
 server {
     listen 80;
     # add  to server_name to run locally
-    server_name pchmfbhcvm.us-west-2.awsapprunner.com; # not sure what this should be in prod
+    # localhost 127.0.0.1; #
+    server_name ifdfgjpy82.us-west-2.awsapprunner.com; # not sure what this should be in prod
 
     access_log /dev/stdout;
     error_log /dev/stdout debug;
